# kmm

./: .gitignore  README.rst  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: publish.yml  test.yml
docs/source/: conf.py  header.rst  index.rst  positions.rst  read.rst  requirements.txt
kmm/: __init__.py  camera_positions.py  car_direction.py  geodetic.py  header.py  kmm.py  kmm2.py  position_adjustment.py  positions.py  read.py  read_raw.py  sync_frame_index.py  wire_camera_positions.py
kmm/header/: header.py
kmm/positions/: __init__.py  geodetic.py  positions.py  read_kmm.py  read_kmm2.py  read_raw.py  sync_frame_index.py  wire_camera_positions.py
tests/: 20210819_165120_2011T.kmm2  ascending_A.hdr  ascending_A.kmm2  ascending_B.hdr  descending_A.kmm  empty.hdr  empty.kmm2  extra_columns.kmm2  owlsbtlpos20210819_165120_2011TA.hdr
