[tool.poetry]
name = "kmm"
version = "0.0.0"
description = "Minimalistic library for reading files in the kmm/kmm2 file format"
authors = ["NextML AB"]
license = "Apache 2.0"

[tool.poetry.dependencies]
# Floor raised to 3.9 (the minimum pandas 2.x supports) and ceiling to <3.13
# for Python 3.12. 3.8 is the only version dropped.
python = ">=3.9,<3.13"
numpy = "^1.21.2"
pydantic = "^2.0.0"
# pandas 2.1 is the first line with cp312 wheels (and requires Python >=3.9).
pandas = "^2.1"
sweref99 = "0.2"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.62.2"
pytest = "^6.2.5"
flake8 = "^3.9.2"
Sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"
recommonmark = "^0.7.1"
ipykernel = "^6.29.3"
ipywidgets = "^8.1.2"
black = "^22.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
