[project]
name = "kmm"
version = "0.0.0"
description = "Minimalistic library for reading files in the kmm/kmm2 file format"
authors = [{ name = "NextML AB" }]
requires-python = ">=3.9,<3.13"
license = "Apache-2.0"
dependencies = [
    "numpy>=1.21.2,<2",
    "pydantic>=2.0.0,<3",
    "pandas>=2.1,<3",
    "sweref99==0.2",
]

[dependency-groups]
dev = [
    "tqdm>=4.62.2,<5",
    "pytest>=6.2.5,<7",
    "flake8>=3.9.2,<4",
    "Sphinx>=4.1.2,<5",
    "sphinx-rtd-theme>=0.5.2,<0.6",
    "recommonmark>=0.7.1,<0.8",
    "ipykernel>=6.29.3,<7",
    "ipywidgets>=8.1.2,<9",
    "black>=22.0.1,<23",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# kmm uses a flat layout (package at repo root), not src/.
module-root = ""
